# SIGMAX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEBASE_AUDIT_SESSION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  DEVELOPMENT_STATUS.md  Dockerfile  EXCHANGE_API_MANAGEMENT.md  EXCHANGE_UI_GUIDE.md  FINAL_DEVELOPMENT_SUMMARY.md  LICENSE  Makefile  PHASE_0_COMPLETION.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  QUICKSTART_CLI.md  QUICKSTART_ENHANCEMENTS.md  README.md  RELEASE_SUMMARY_v3.0.0.md  REMEDIATION_PLAN.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES.md  SECURITY_FIX_SUMMARY.md  SESSION_CONTINUATION_2_SUMMARY.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_SUMMARY.md  TESTING_SUMMARY.md  TEST_VALIDATION_REPORT.md  V1_COMPLETE_SUMMARY.md  VALIDATION_REPORT.md  __version__.py  conftest.py  deploy.sh  (+16 more)
.claude/workflows/: performance-optimization.yaml  security-audit.yaml  trading-pipeline.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
.jules/: bolt.md
apps/book_shard/: __init__.py  book_manager.py  main.py  publisher.py  subscriber.py
apps/decision/: __init__.py  decision_engine.py  main.py  publisher.py  subscriber.py
apps/exec_cex/: __init__.py  execution_engine.py  main.py  publisher.py  subscriber.py
apps/features/: __init__.py  feature_engine.py  main.py  publisher.py  subscriber.py
apps/ingest_cex/: __init__.py  feed_manager.py  main.py  publisher.py
apps/risk/: __init__.py  main.py  publisher.py  risk_engine.py  subscriber.py
apps/router/: __init__.py  main.py  publisher.py  routing_engine.py  subscriber.py
apps/signals/: __init__.py  common.py
core/: __init__.py  main.py  requirements.txt
core/agents/: __init__.py  analyzer.py  autonomous_toolkit.py  behavioral_agent.py  crewai_agents.py  crewai_orchestrator.py  finrobot_integration.py  fundamental_analyzer.py  optimizer.py  orchestrator.py  planner.py  privacy.py  researcher.py  risk.py  secure_orchestrator.py  sentiment.py  validator.py
core/behavioral/: __init__.py  behavioral_biases.py  investor_belief.py  matching_engine.py  social_sentiment.py
core/benchmark/: __init__.py  agent_analytics.py  live_benchmark.py  realtime_leaderboard.py
core/cli/: MANIFEST.in  README.md  commands.py  config.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  shell.py
core/cli/cli/: __init__.py  client.py  commands.py  formatting.py  main.py  shell.py
core/competition/: __init__.py  dashboard.py  ensemble_voting.py  multi_model_arena.py
core/config/: fundamentals_config.yaml  opa_policies.rego  planning_config.yaml  validation_config.yaml  validator.py
core/interfaces/: __init__.py  channel_service.py  contracts.py
core/llm/: factory.py
core/mcp/: __init__.py  toolchain.py
core/modules/: alerts.py  arbitrage.py  backtest.py  chain_data.py  compliance.py  data.py  execution.py  federated_learning.py  financial_ratios.py  hft_execution.py  lean_execution.py  ml_predictor.py  observability.py  performance_monitor.py  portfolio_rebalancer.py  protocols.py  quantum.py  regime_detector.py  research_safety.py  rl.py  rust_execution.py  safety_enforcer.py  zkml_compliance.py
core/security/: __init__.py  news_validator.py  prompt_guard.py  state_integrity.py  tool_validator.py
core/testing/: fixtures.py
core/utils/: cache.py  data_boundary_validator.py  decision_history.py  healthcheck.py  (+8 more)
docs/: AGENT_DEBATE_STORAGE_ASSESSMENT.md  API_REFERENCE.md  ARCHITECTURE.md  BEHAVIORAL_FINANCE.md  CLI.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_PACKAGING_ASSESSMENT.md  CREWAI_MIGRATION.md  DEPLOYMENT.md  DEXTER_ANALYSIS.md  DEXTER_COMPARISON.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_PROPOSAL_AI_TRADER_INSPIRED.md  FEDERATED_LEARNING.md  FINROBOT_RDAGENT_INTEGRATION.md  HFT_INTEGRATION.md  INDEX.md  INTEGRATION_TESTING.md  INTERFACE_ENHANCEMENT_PLAN.md  MONITORING_SETUP.md  OPERATIONAL_RUNBOOK.md  PERFORMANCE_BASELINE.md  PERFORMANCE_BENCHMARKING_COMPLETE.md  PHASE1_BASELINE_ASSESSMENT.md  PHASE1_VALIDATION.md  PHASE2_COMPLETION_TRACKER.md  PHASE2_FINAL_SUMMARY.md  PHASE2_INTEGRATION_TESTING.md  PHASE2_PLANNING.md  PHASE2_PLANNING_PROGRESS.md  PHASE3_FUNDAMENTALS.md  PHASE3_PYTHON_SDK_READY.md  PHASE3_SDK_ASSESSMENT.md  PHASE3_TYPESCRIPT_SDK_COMPLETE.md  PHASE4_CLI_PACKAGING_COMPLETE.md  PLUGIN_INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUANTUM_INTEGRATION_ASSESSMENT.md  QUICKSTART.md  REMEDIATION_PLAN.md  (+14 more)
examples/: README.md  basic_usage.py  websocket_example.py
infra/: prometheus.yml
numpy/: __init__.py
pandas/: __init__.py
profiles/: profile_a.yaml  profile_b.yaml
rust_execution/: Cargo.toml
rust_execution/src/: lib.rs
scripts/: README.md  backup_restore.py  deploy.py  emergency_shutdown.py  health_check.py  security_audit.py  security_check.py  validate_environment.sh
sdk/python/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_OVERVIEW.md  PACKAGE_TREE.txt  QUICK_START.md  README.md  SDK_DELIVERY_SUMMARY.md  pyproject.toml  setup.py  verify_package.py
sdk/python/examples/: README.md  async_operations.py  basic_usage.py  error_handling.py  streaming.py
sdk/python/sigmax_sdk/: __init__.py  client.py  exceptions.py  models.py  types.py
sdk/python/tests/: __init__.py  test_client.py
tests/: __init__.py  test_chat_proposals.py  test_crewai_system.py  test_decision_history.py  test_example.py  test_exchange_manager.py  test_federated_learning.py  test_finrobot_integration.py  test_fundamentals.py  test_hft_execution.py  test_observability.py  test_planning.py  test_rl_module.py  test_rust_execution.py  test_safety_enforcer.py  test_validation.py  test_zkml_compliance.py
tools/: analyze_trades.py  behavioral_simulation.py  benchmark.py  check_licenses.py  health_check.py  import_dashboards.sh  init_database.py  runner.py
(+166 files in other folders)
