[package]
name = "sigmax_rust_execution"
version = "0.1.0"
edition = "2021"

[lib]
name = "sigmax_rust_execution"
crate-type = ["cdylib"]

[dependencies]
# SECURITY FIX: Updated to 0.24.1+ to fix GHSA-pph8-gcv7-4qj5 buffer overflow (Dependabot #20)
# https://github.com/I-Onlabs/SIGMAX/security/dependabot/20
pyo3 = { version = "0.24.1", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
