[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmax-sdk"
version = "1.0.0"
description = "Official Python SDK for SIGMAX - Autonomous AI Crypto Trading System"
authors = [
    {name = "SIGMAX Contributors", email = "dev@sigmax.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "sigmax",
    "trading",
    "crypto",
    "cryptocurrency",
    "bitcoin",
    "ethereum",
    "trading-bot",
    "algorithmic-trading",
    "api-client",
    "async",
    "ai-trading",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.28.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/I-Onlabs/SIGMAX"
Documentation = "https://github.com/I-Onlabs/SIGMAX/tree/main/sdk/python"
Repository = "https://github.com/I-Onlabs/SIGMAX"
"Bug Tracker" = "https://github.com/I-Onlabs/SIGMAX/issues"

[tool.setuptools]
packages = ["sigmax_sdk"]

[tool.setuptools.package-data]
sigmax_sdk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "httpx_sse.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=sigmax_sdk",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sigmax_sdk"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
